--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.1.jar}:\
     ${file.reference.rs2xml.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
